--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -38,7 +38,7 @@
       </form> 
       
       <br>
-      <a type="button">Registrarse</a> 
+      <a href="register">Registrarse</a> 
     </div>  
 
     <!-- Fin del login -->
