--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     
-    <title>Login</title>
+    <title>Administrador</title>
   </head>
   <body class="container-body">
     <!-- Inicio de NavBar -->
@@ -24,21 +24,11 @@
 
     <!-- Inicio del login -->
   
-    <div class="container-login-form">
-      <form action="/login" method="POST">
-        <div>
-          <label for="usuario">Usuario</label>
-          <input type="text" name="usuario" id="usuario">
-        </div>  
-        <div>
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password">
-        </div>
-        <button type="submit">Login</button>  
-      </form> 
-      
-      <br>
-      <a href="register" type="button">Registrarse</a> 
+    <div class="container-admin-form">
+     <h3>PANEL DE ADMINISTRADOR</h3>
+     <div>
+      <a href="logout" type="button">Logout</a>
+     </div>
     </div>  
 
     <!-- Fin del login -->
@@ -48,23 +38,9 @@
     <!-- Fin del pie -->
     
     <!-- Inicio de JS -->
+    <script src="../js/script-login.js"></script>
     <script src="../js/header.js"></script>
     <script src="../js/menu-hamburguesa.js"></script>
-
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <% if(alert) { %>
-      <script>
-        Swal.fire({
-          title: '<%= alertTitle %>',
-          text: '<%= alertMessage %>',
-          icon: '<%= alertIcon %>',
-          showConfirmButton: <%= showConfirmButton %>,
-          timer: <%= timer %>
-        }).then(() => {
-          window.location = '/<%= ruta %>'
-        })
-      </script>
-    <% } %>
     <!-- Fin de JS -->
   </body>
 </html>
