--- a/src/views/editar-menu.ejs
+++ b/src/views/editar-menu.ejs
@@ -24,32 +24,35 @@
 
     <!-- Inicio del login -->
   
-    <% if (menu) { %>
-    <div class="container-agregar-form">
-        <form action="/actualizar" method="POST">
-          <input id="id_menu" name="id_menu" value="<%= menu.id_menu %>" hidden>
-          <div>
-            <label for="nom_menu">Nombre Menu</label>
-            <input type="text" id="nom_menu" name="nom_menu" value="<%= menu.nom_menu %>">
-          </div>
-          <br>
-          <div>
-            <label for="estacion">Estación</label>
-            <input type="text" id="estacion" name="estacion" value="<%= menu.id_estacion %>">
-          </div>
-          <br>
-          <div>
-            <label for="tipo_comida">Tipo</label>
-            <input type="text" id="tipo_comida" name="tipo_comida" value="<%= menu.id_tipo_comida %>">
-          </div>
-          <br>
-          <div class="buttons">
-              <button type="submit">Guardar</button>
-              <a href="/" type="button">Cancelar</a>
-          </div>
-        </form>
-      </div>  
+    <div class="container-editar-form">
+      <h1>Editar Menu</h1>
+      <% if (menu) { %>
+          <form action="/actualizar" method="POST" id="editar-form">
+            <fieldset> 
+              <input id="id_menu" name="id_menu" value="<%= menu.id_menu %>" hidden>
+              <div>
+                <label for="nom_menu">Nombre Menu</label>
+                <input type="text" id="nom_menu" name="nom_menu" value="<%= menu.nom_menu %>">
+              </div>
+              <br>
+              <div>
+                <label for="estacion">Estación</label>
+              <input type="text" id="estacion" name="estacion" value="<%= menu.id_estacion %>">
+              </div>
+              <br>
+              <div>
+                <label for="tipo_comida">Tipo</label>
+                <input type="text" id="tipo_comida" name="tipo_comida" value="<%= menu.id_tipo_comida %>">
+              </div>
+              <br>
+              <div class="buttons editar-btns">
+                <button type="submit" class="btn btn-primary btn-input">Guardar</button>
+                <a href="/admin" type="button">Cancelar</a>
+              </div>
+            </fieldset>
+          </form>
       <% } %>  
+    </div>  
 
     <!-- Fin del login -->
 
