--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -25,26 +25,28 @@
     <!-- Inicio del login -->
   
     <div class="container-register-form">
-      <form action="/register" method="POST">
-        <div>
-          <label for="usuario">Usuario</label>
-          <input type="text" id="usuario" name="usuario">
-        </div>
-        <br>
-        <div>
-          <label for="email">Email</label>
-          <input type="text" id="email" name="email">
-        </div>
-        <br>
-        <div>
-          <label for="password">Contraseña</label>
-          <input type="password" id="password" name="password">
-        </div>
-        <br>
-        <div class="buttons">
-          <a href="/" type="button">Cancelar</a>
-          <button type="submit">Registrar</button>
-        </div>
+      <form action="/register" method="POST" id="register-form">
+        <fieldset>
+          <div>
+            <label for="usuario">Usuario</label>
+            <input type="text" id="usuario" name="usuario">
+          </div>
+          <br>
+          <div>
+            <label for="email">Email</label>
+            <input type="text" id="email" name="email">
+          </div>
+          <br>
+          <div>
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" name="password">
+          </div>
+          <br>
+          <div class="buttons register-btns">
+            <button type="submit" class="btn btn-primary btn-input">Registrar</button>
+            <a href="/" type="button">Cancelar</a>
+          </div>
+        </fieldset>
       </form>
     </div>  
 
