--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -60,6 +60,21 @@
     <script src="../js/script-login.js"></script>
     <script src="../js/header.js"></script>
     <script src="../js/menu-hamburguesa.js"></script>
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <% if(alert) { %>
+      <script>
+        Swal.fire({
+          title: '<%= alertTitle %>',
+          text: '<%= alertMessage %>',
+          icon: '<%= alertIcon %>',
+          showConfirmButton: <%= showConfirmButton %>,
+          timer: <%= timer %>
+        }).then(() => {
+          window.location = '/<%= ruta %>'
+        })
+      </script>
+    <% } %>
     <!-- Fin de JS -->
   </body>
 </html>
