--- a/src/views/editar-menu.ejs
+++ b/src/views/editar-menu.ejs
@@ -66,9 +66,9 @@
               </div>
 
               <br>
-              <div class="buttons editar-btns">
-                <button type="submit" class="btn btn-primary btn-input">Guardar</button>
-                <a href="/admin" type="button">Cancelar</a>
+              <div class="buttons">
+                <input type="submit" value="Guardar" class="btn btn-primary btn-input">
+                <a href="/admin" type="button" class="register-login">Cancelar</a> 
               </div>
             </fieldset>
           </form>
