--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -30,21 +30,19 @@
           <div>
             <label for="usuario">Usuario</label>
             <input type="text" name="usuario" id="usuario">
-          </div>  
+          </div>
+          <br>
           <div>
             <label for="password">Password</label>
             <input type="password" name="password" id="password">
           </div>
-          <div class="buttons login-btns">
-            <button type="submit">Login</button>  
+          <br>
+          <div class="buttons">
+            <input type="submit" value="Login" class="btn btn-primary btn-input">
+            <a href="register" type="button" class="register-login">Registrarse</a> 
           </div>
         </fieldset>
       </form> 
-      
-      <br>
-      <div class="buttons register-btns">
-        <a href="register" type="button">Registrarse</a> 
-      </div>
     </div>  
 
     <!-- Fin del login -->
