--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -42,9 +42,10 @@
             <input type="password" id="password" name="password">
           </div>
           <br>
-          <div class="buttons register-btns">
-            <button type="submit" class="btn btn-primary btn-input">Registrar</button>
-            <a href="/" type="button">Cancelar</a>
+          
+          <div class="buttons">
+            <input type="submit" value="Registrar" class="btn btn-primary btn-input">
+            <a href="/" type="button" class="register-login">Cancelar</a> 
           </div>
         </fieldset>
       </form>
