--- a/src/views/agregar-menu.ejs
+++ b/src/views/agregar-menu.ejs
@@ -64,11 +64,10 @@
                 <option value=4>infusión</option>
               </select>
             </div>
-
             <br>
-            <div class="buttons agregar-btns">
-              <button type="submit" class="btn btn-primary btn-input">Guardar</button>
-              <a href="/admin" type="button">Cancelar</a>
+            <div class="buttons">
+              <input type="submit" value="Guardar" class="btn btn-primary btn-input">
+              <a href="/admin" type="button" class="register-login">Cancelar</a> 
             </div>
           </fieldset>
         </form>
