--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -51,8 +51,9 @@
                   <td><%= menu.nom_estacion %></td>
                   <td><%= menu.descripcion %></td>
                   <td>
-                    <a href="/editar/<%= menu.id_menu %>" type="button">Editar</a>
-                    <a href="/borrar/<%= menu.id_menu %>" type="button">Borrar</a>
+                    <a href="/editar/<%= menu.id_menu %>" type="button"><i class="bi bi-pencil-square"></i></a>
+                    <span> | </span>
+                    <a href="/borrar/<%= menu.id_menu %>" type="button"><i class="bi bi-trash3"></i></a>
                   </td>
                 </tr>
                 <% }) %>
